--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "ejs": "^2.6.1",
     "express": "~4.16.0",
     "express-session": "^1.15.6",
+    "formidable": "^1.2.2",
     "http-errors": "~1.6.2",
     "mongoose": "^5.4.22",
     "morgan": "~1.9.0",
+    "multiparty": "^4.2.1",
     "node-dev": "^3.1.3"
   }
 }
